Fixed target spinner color options

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -418,6 +418,10 @@ Screen :
             background_color: 0,0,0,0.25
             on_press: plot.zoom_out()
 
+
+<TargetSelectionSpinnerOptions>:
+    color: app.theme_cls.text_color
+    
 <TargetSelectionScreen>:
     orientation: "vertical"
     InteractiveTargetMap:
